Making code more intelligible (#189).

--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1397,6 +1397,9 @@ command.name.19.*=View Python documentation
 command.subsystem.19=2
 command.19.*=xdg-open https://docs.python.org/3/ &
 
+command.name.20.*=Artistic Style
+command.20.*=astyle --style=1tbs --indent=spaces --indent-switches --indent-cases --indent-namespaces --unpad-paren --indent-classes "$(FileNameExt)"
+
 # Always run pdflatex to compile LaTeX.
 
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interact ion=nonstopmode $(FileNameExt)
