--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1337,10 +1337,10 @@ command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/i
 # If other libraries turn out to be needed just stick them on the link line here.
 
 command.name.5.*=Build Csound C++ plugin opcode (release)
-command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -O3 -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
+command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -O3 -g -Wno-write-strings -I.  -I/usr/local/include  "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
 
 command.name.6.*=Build Csound C++ plugin opcode (debug)
-command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include     -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
+command.6.*=g++ -Dlinux --std=gnu++17 --g lstdc++fs -Wno-write-strings -I.  -I/usr/local/include      "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
 
 # Custom commands for running Csound to dac or soundfile with or without 
 # post-processing. It is assumed that the csd filename + .wav becomes the 
