--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1340,7 +1340,7 @@ command.name.5.*=Build Csound C++ plugin opcode (release)
 command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -O3 -g -Wno-write-strings -I.  -I/usr/local/include  "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
 
 command.name.6.*=Build Csound C++ plugin opcode (debug)
-command.6.*=g++ -Dlinux --std=gnu++17 --g lstdc++fs -Wno-write-strings -I.  -I/usr/local/include      "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
+command.6.*=g++ -Dlinux --std=gnu++17 -g -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include      "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
 
 # Custom commands for running Csound to dac or soundfile with or without 
 # post-processing. It is assumed that the csd filename + .wav becomes the 
@@ -1398,7 +1398,7 @@ command.subsystem.19=2
 command.19.*=xdg-open https://docs.python.org/3/ &
 
 command.name.20.*=Artistic Style
-command.20.*=astyle --style=1tbs --indent=spaces --indent-switches --indent-cases --indent-namespaces --unpad-paren --indent-classes "$(FileNameExt)"
+command.20.*=astyle --style=1tbs --indent=spaces --indent-switches --indent-cases --indent-namespaces --unpad-paren --indent-classes --indent-after-parens --style=attach "$(FileNameExt)"
 
 # Always run pdflatex to compile LaTeX.
 
