--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1332,10 +1332,10 @@ command.name.7.*=Render csd piece to audio
 command.7.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -odac:plughw:2,0 -m163 -+msg_color=0
 
 command.name.8.*=Render csd piece to soundfile and play
-command.8.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
+command.8.*=cd "$(FileDir)" && set +e;csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 
 command.name.9.*=Render csd piece to soundfile and post-process and play 
-command.9.*=cd $(FileDir) && csound $(FileNameExt) --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && python $(SciteUserHome)/post-process.py "/tmp/$(FileNameExt).wav"
+command.9.*=cd $(FileDir) && set +e; csound $(FileNameExt) --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && python $(SciteUserHome)/post-process.py "/tmp/$(FileNameExt).wav"
 
 command.name.10.*=Render orc+sco piece to audio
 command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -odac:plughw:2,0 -m163 -+msg_color=0
