--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1329,13 +1329,13 @@ command.6.*=g++ -Dlinux --std=gnu++17 -g -lstdc++fs -Wno-write-strings -I.  -I/u
 # not to end up on Dropbox.
 
 command.name.7.*=Render csd piece to audio
-command.9.*=cd "$(FileDir)" && python $(HomeDir)/csound_commands.py audio "$(FileNameExt)"  
+command.7.*=cd "$(FileDir)" && python $(HOME)/csound_commands.py audio "$(FileNameExt)"  
 
 command.name.8.*=Render csd piece to soundfile and play
-command.9.*=cd "$(FileDir)" && python $(HomeDir)/csound_commands.py soundfile "$(FileNameExt)"  
+command.8.*=cd "$(FileDir)" && python $(HOME)/csound_commands.py soundfile "$(FileNameExt)"  
 
 command.name.9.*=Render csd piece to soundfile and post-process and play 
-command.9.*=cd "$(FileDir)" && python $(HomeDir)/csound_commands.py play "$(FileNameExt)"  
+command.9.*=cd "$(FileDir)" && python $(HOME)/csound_commands.py play "$(FileNameExt)"  
 
 command.name.10.*=Render orc+sco piece to audio
 command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -odac:plughw:2,0 -m163 -+msg_color=0
