--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1328,13 +1328,13 @@ command.6.*=g++ -Dlinux --std=gnu++17 -g -lstdc++fs -Wno-write-strings -I.  -I/u
 # by spaces, is the title of the piece. Soundfiles are written to /tmp so as 
 # not to end up on Dropbox.
 
-command.name.7.*=Render csd piece to audio
+command.name.7.*=Render Csound piece to audio
 command.7.*=cd "$(FileDir)" && python $(HOME)/csound_commands.py audio "$(FileNameExt)"  
 
-command.name.8.*=Render csd piece to soundfile and play
+command.name.8.*=Render Csound piece to soundfile and play
 command.8.*=cd "$(FileDir)" && python $(HOME)/csound_commands.py soundfile "$(FileNameExt)"  
 
-command.name.9.*=Render csd piece to soundfile and post-process and play 
+command.name.9.*=Render Csound piece to soundfile and post-process and play 
 command.9.*=cd "$(FileDir)" && python $(HOME)/csound_commands.py play "$(FileNameExt)"  
 
 command.name.10.*=Render orc+sco piece to audio
@@ -1351,6 +1351,9 @@ command.13.*=cd "$(FileDir)" && python $(SciteUserHome)/instrument_test.py "$(Fi
 
 command.name.14.*=Test effect patch to audio
 command.14.*=cd "$(FileDir)" && python $(SciteUserHome)/effect_test.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:2,0"
+
+command.name.15.*=Test instrument patch to spatialized audio
+command.15.*=cd "$(FileDir)" && python $(SciteUserHome)/instrument_test_spatial.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:2,0"
 
 
 # Custom command for opening a CSD file in Cabbage to add or use a graphical user interface.
