More cross-platform build system (#196).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,25 +105,22 @@ option(BUILD_WIIMOTE_OPCODES "Build the Wiimote opcodes" ON)
 # targets.
 
 find_package(Csound REQUIRED)
-find_package(Eigen3 REQUIRED NO_MODULE)
+find_package(Eigen3 REQUIRED CONFIG)
+# checking property of the target
+get_target_property(inc_dir Eigen3::Eigen INTERFACE_INCLUDE_DIRECTORIES)
+message("[DEBUG] inc_dir: ${inc_dir}")
+# or checking the Eigen variable
+message("[DEBUG] EIGEN3_INCLUDE_DIRS: ${EIGEN3_INCLUDE_DIRS}")
 find_package(FLTK REQUIRED NO_MODULE)
 #message("FLTK_USE_FILE: ${FLTK_USE_FILE}")
 #include(${FLTK_USE_FILE})
-find_package(FluidSynth)
-find_package(Gettext)
-find_package(GMM)
-find_package(Java)
-find_package(JNI)
-find_package(LIBLO)
 find_package(MUSICXML)
 find_package(OpenCV REQUIRED)
 find_package(PORTSMF)
-find_package(PNG)
 find_package(Python3 COMPONENTS Interpreter Development)
 find_package(SWIG)
 include(UseSWIG)
 find_package(SWIG)
-find_package(ZLIB)
 
 include_directories("${CSOUND_INCLUDE_DIR}")
 include_directories("${CSOUND_INCLUDE_DIR}/csound")
