--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,14 +111,12 @@ get_target_property(inc_dir Eigen3::Eigen INTERFACE_INCLUDE_DIRECTORIES)
 message("[DEBUG] inc_dir: ${inc_dir}")
 # or checking the Eigen variable
 message("[DEBUG] EIGEN3_INCLUDE_DIRS: ${EIGEN3_INCLUDE_DIRS}")
-# set(FLTK_DIR /usr/local/FLTK.framework/Resources/CMake)
 set(CMAKE_PREFIX_PATH /usr/local)
-# find_package(FLTK REQUIRED  CONFIG PATHS /usr/local/FLTK.framework/Resources/CMake NO_DEFAULT_PATH )
-find_package(FLTK REQUIRED  MODULE)
+find_package(FLTK REQUIRED NO_MODULE)
 #/usr/local/FLTK.framework/Resources/CMake/FLTKConfig.cmake
 find_package(MUSICXML)
 find_package(OpenCV REQUIRED)
-find_package(Boost REQUIRED COMPONENTS ALL)
+find_package(Boost REQUIRED)
 message("[DEBUG] Boost_INCLUDE_DIR: ${Boost_INCLUDE_DIR}")
 message("[DEBUG] Boost_COMPONENTS: ${Boost_COMPONENTS}")
 find_package(PORTSMF)
