Fixing System class for cross-platform builds (#196).

--- a/CsoundAC/CMakeLists.txt
+++ b/CsoundAC/CMakeLists.txt
@@ -60,6 +60,7 @@ if(BUILD_CSOUND_AC)
         Shell.cpp
         Soundfile.cpp
         StrangeAttractor.cpp
+        System.cpp
         Voicelead.cpp
         VoiceleadingNode.cpp)
 
