CsoundAC C++ library is working on macOS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,7 @@ option(BUILD_WIIMOTE_OPCODES "Build the Wiimote opcodes" ON)
 message("CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
 set(CMAKE_PREFIX_PATH /usr/local)
 find_package(Csound REQUIRED)
+message("CSOUND_LIBRARIES: ${CSOUND_LIBRARIES}")
 find_library(LIBSNDFILE_LIBRARY sndfile REQUIRED)
 find_library(CSND6_LIBRARY csnd6 REQUIRED)
 find_package(Eigen3 REQUIRED CONFIG)
