--- a/playpen/playpen.ini
+++ b/playpen/playpen.ini
@@ -20,7 +20,7 @@ license=ASCAP
 
 [csound]
 
-audio-output=dac:plughw:1,0
+audio-output=dac6
 
 # Other settings.
 
@@ -32,3 +32,16 @@ gnome-theme=Yaru-dark
 # lower-case!
 editor-scheme=cobalt
 verbose=False
+
+# Basic C++ compiler command to build a program from one source file.
+# Source file and output name should NOT be specified, will be added later.
+
+[cplusplus]
+# Uncomment for your platform.
+# Darwin:
+# compiler-command = c++ {} -v --std=gnu++17 -lstdc++ -O3 -g -Wno-write-strings -I.  -I/Library/Frameworks/CsoundLib64.framework/Versions/6.0/Headers -I/usr/local/include -I/usr/local/include/csound -I/opt/homebrew/Cellar/eigen/3.4.0_1/include/eigen3 -I/opt/homebrew/Cellar/opencv/4.5.4_3/include/opencv4 -I/opt/homebrew/Cellar/boost/1.78.0_1/include -I/opt/local/include /Library/Frameworks/CsoundLib64.framework/Versions/6.0/CsoundLib64 -lCsoundAC -L/opt/homebrew/lib -lsndfile -lgc -lpthread -ldl -lm 
+# Linux:
+compiler-command = c++ -v --std=gnu++17 -lstdc++ -O3 -g -Wno-write-strings -I. -I/usr/local/include -I/usr/local/include -I/usr/include/csound -I/usr/local/include/csound -I/home/mkg/csound/interfaces -I/usr/include/eigen3 -lcsound64 -lCsoundAC -lsndfile -lgc -lpthread -ldl -lm
+# Windows:
+# compiler-command = "Not implemented."
+
