--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1275,7 +1275,7 @@ keywords3.$(file.patterns.csound)=$(csound_other_keywords)
 
 comment.block.csound=;
 
-command.go.*.inc=python3.8 ${SciteUserHome)/instrument_test.py $(FileName) 
+command.go.*.inc=python3.9 ${SciteUserHome)/instrument_test.py $(FileName) 
 command.go.subsystem.*.inc=0
 
 command.go.*.csd=csound "$(FilePath)" -+msg_color=0
@@ -1298,7 +1298,7 @@ command.go.$(file.patterns.html)=$(SciteUserHome)/run_nwjs_application.sh $(File
 # If other libraries turn out to be needed just stick them on the link line here.
 
 command.name.0.*=Build C++ piece for debug
-command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/local/include -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -g3 -gdwarf-3 -DDEBUG "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm
+command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/local/include -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -g3 -gdwarf-3 -DDEBUG "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -I/home/mkg/csound/interfaces -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm
 
 command.name.1.*=Render C++ piece to audio
 command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
@@ -1310,7 +1310,7 @@ command.name.3=*=Render C++ piece to soundfile and post-process
 command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
 
 command.name.4.*=Render C++ piece to soundfile and post-process and play 
-command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
+command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -I/home/mkg/csound/interfaces -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
 
 # Custom commands for building a C++ plugin opcode for Csound.
 # Each plugin must be one C++ file; this is not much of a limitation.
@@ -1388,7 +1388,7 @@ command.20.*=astyle --style=1tbs --indent=spaces --indent-switches --indent-case
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interact ion=nonstopmode $(FileNameExt)
 command.go.$(file.patterns.tex)=xdg-open $(FileName).pdf
 
-command.go.*.py=python3.7 -u "$(FileNameExt)"
+command.go.*.py=python3 -u "$(FileNameExt)"
 
 # The 'Output' pane is the 'errorlist'. See 'others.properties.'
 
