Removed csound_commands.py in favor of playpen.py.

--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1413,3 +1413,59 @@ style.batch.0=fore:#00A0FF
 # External commands
 style.batch.5=fore:#00DB90,$(font.monospace),bold
 
+# Playpen section
+
+python3 playpen.py csd-audio {source.csd}
+#    Renders the csd file to the system audio device specified in playpen.ini.
+    
+python3 playpen.py csd-soundfile {source.csd}
+#    Renders the csd file to a soundfile constructed using metadata from 
+#    playpen.ini, then post-processes the file to normalize it, save it in 
+#    various formats, etc., and finally opens the soundfile using the editor 
+#    specified in playpen.ini.
+    
+python3 playpen.py csound-patch {source.inc}
+#    Includes the inc file in a csd file, renders it to a soundfile, and 
+#    opens the soundfile using the editor specified in playpen.ini.
+    
+python3 playpen html-nw {source.html}
+#    Creates a package.json file for the specified HTML file, and runs that 
+#    file as a NW.js application.
+    
+python3 playpen.py cpp-lib {source.cpp}
+#    Compiles and links source.cpp file as a shared library source.so or 
+#    source.dylib, with build options for Csound plugin opcodes.
+    
+python3 playpen.py cpp-app {source.cpp}
+#    Compiles and links source.cpp file as a program source or source.app, 
+#    with build options for linking with libCsound64 and libCsoundAC.
+    
+python3 playpen.py cpp-audio {source.cpp}
+#    Compiles and links source.cpp file as a Csound/CsoundAC composition, and 
+#    runs it to render audio.
+    
+python3 playpen.py cpp-soundfile {source.cpp}
+#    Compiles and links source.cpp file as a Csound/CsoundAC composition, 
+#    renders the piece to a source.wav tagged with metadata from 
+#    playpen.ini, then post-processes the file to normalize it, save in various 
+#    formats, etc., and finally opens the soundfile using the editor specified 
+#    in playpen.ini.
+    
+python3 playpen.py man-csound
+#    Opens the online Csound Reference Manual.
+# Custom command for CsoundAC reference.
+command.name.20.*=View the online Csound Reference Manual
+command.subsystem.18=2
+command.18.*=python3 ~/playpen.py man-csound
+
+python3 playpen.py man-python
+#    Opens the online Python documentation.
+
+python3 playpen.py man-csoundac
+#    Opens the CsoundAC AP Reference.
+
+python3 playpen.py cpp-astyle {source}
+#    Uses the astyle program to reform the source file, using 
+#    options configured in playpen.ini.
+
+
