--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1293,98 +1293,6 @@ command.go.subsystem.$(file.patterns.lisp)=0
 
 command.go.$(file.patterns.html)=$(SciteUserHome)/run_nwjs_application.sh $(FileNameExt) $(FileName) $(FileDir)
 
-# Custom commands for building and running a Csound piece written in C++.
-# Each piece must be one C++ file; this is not much of a limitation.
-# If other libraries turn out to be needed just stick them on the link line here.
-
-command.name.0.*=Build C++ piece for debug
-command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/local/include -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -g3 -gdwarf-3 -DDEBUG "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -I/home/mkg/csound/interfaces -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm
-
-command.name.1.*=Render C++ piece to audio
-command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
-
-command.name.2.*=Render C++ piece to soundfile
-command.2.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound 
-
-command.name.3=*=Render C++ piece to soundfile and post-process
-command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
-
-command.name.4.*=Render C++ piece to soundfile and post-process and play 
-command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -I/home/mkg/csound/interfaces -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
-
-# Custom commands for building a C++ plugin opcode for Csound.
-# Each plugin must be one C++ file; this is not much of a limitation.
-# If other libraries turn out to be needed just stick them on the link line here.
-
-command.name.5.*=Build Csound C++ plugin opcode (release)
-command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -O3 -g -Wno-write-strings -I.  -I/usr/local/include  "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
-
-command.name.6.*=Build Csound C++ plugin opcode (debug)
-command.6.*=g++ -Dlinux --std=gnu++17 -g -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include      "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
-
-# Custom commands for running Csound to dac or soundfile with or without 
-# post-processing. It is assumed that the csd filename + .wav becomes the 
-# output soundfile and that the root of the csd filename, with - or _ replaced 
-# by spaces, is the title of the piece. Soundfiles are written to /tmp so as 
-# not to end up on Dropbox.
-
-command.name.7.*=Render Csound piece to audio
-command.7.*=cd "$(FileDir)" && python $(HOME)/csound_commands.py audio "$(FileNameExt)"  
-
-command.name.8.*=Render Csound piece to soundfile and play
-command.8.*=cd "$(FileDir)" && python $(HOME)/csound_commands.py soundfile "$(FileNameExt)"  
-
-command.name.9.*=Render Csound piece to soundfile and post-process and play 
-command.9.*=cd "$(FileDir)" && python $(HOME)/csound_commands.py play "$(FileNameExt)"  
-
-command.name.10.*=Render orc+sco piece to audio
-command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -odac:plughw:2,0 -m163 -+msg_color=0
-
-command.name.11.*=Render orc+sco piece to soundfile and play
-command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
-
-command.name.12.*=Test instrument patch to audio
-command.12.*=cd "$(FileDir)" && python $(SciteUserHome)/instrument_test.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:2,0"
-
-command.name.13.*=Test instrument patch to soundfile 
-command.13.*=cd "$(FileDir)" && python $(SciteUserHome)/instrument_test.py "$(FileNameExt)" "$(FileName)" "-o/tmp/$(FileNameExt).wav" 
-
-command.name.14.*=Test effect patch to audio
-command.14.*=cd "$(FileDir)" && python $(SciteUserHome)/effect_test.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:2,0"
-
-command.name.15.*=Test instrument patch to spatialized audio
-command.15.*=cd "$(FileDir)" && python $(SciteUserHome)/instrument_test_spatial.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:2,0"
-
-
-# Custom command for opening a CSD file in Cabbage to add or use a graphical user interface.
-
-command.name.15.*=Open csd piece in Cabbage
-command.15.*=Cabbage "$(FileNameExt)"
-
-# Custom command for designing a user interface with Glade for Gtk.
-command.name.16.*=Open Python piece in Glade 
-command.16.*=glade "$(FileName).ui" &
-
-# Custom command for Csound reference.
-command.name.17.*=View Csound Reference Manual
-command.subsystem.17=2
-command.17.*=xdg-open https://gogins.github.io/csound-extended-manual/indexframes.html &
-
-# Custom command for CsoundAC reference.
-command.name.18.*=View csound-extended documentation
-command.subsystem.18=2
-command.18.*=xdg-open file://$(SciteUserHome)/csound-extended/doc/html/index.html &
-
-# Custom command for Python documentation.
-command.name.19.*=View Python documentation
-command.subsystem.19=2
-command.19.*=xdg-open https://docs.python.org/3/ &
-
-command.name.20.*=Artistic Style
-command.20.*=astyle --style=1tbs --indent=spaces --indent-switches --indent-cases --indent-namespaces --unpad-paren --indent-classes --indent-after-parens --style=attach "$(FileNameExt)"
-
-# Always run pdflatex to compile LaTeX.
-
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interact ion=nonstopmode $(FileNameExt)
 command.go.$(file.patterns.tex)=xdg-open $(FileName).pdf
 
@@ -1413,59 +1321,52 @@ style.batch.0=fore:#00A0FF
 # External commands
 style.batch.5=fore:#00DB90,$(font.monospace),bold
 
-# Playpen section
+# Playpen commands
 
-python3 playpen.py csd-audio {source.csd}
-#    Renders the csd file to the system audio device specified in playpen.ini.
-    
-python3 playpen.py csd-soundfile {source.csd}
-#    Renders the csd file to a soundfile constructed using metadata from 
-#    playpen.ini, then post-processes the file to normalize it, save it in 
-#    various formats, etc., and finally opens the soundfile using the editor 
-#    specified in playpen.ini.
-    
-python3 playpen.py csound-patch {source.inc}
-#    Includes the inc file in a csd file, renders it to a soundfile, and 
-#    opens the soundfile using the editor specified in playpen.ini.
-    
-python3 playpen html-nw {source.html}
-#    Creates a package.json file for the specified HTML file, and runs that 
-#    file as a NW.js application.
-    
-python3 playpen.py cpp-lib {source.cpp}
-#    Compiles and links source.cpp file as a shared library source.so or 
-#    source.dylib, with build options for Csound plugin opcodes.
-    
-python3 playpen.py cpp-app {source.cpp}
-#    Compiles and links source.cpp file as a program source or source.app, 
-#    with build options for linking with libCsound64 and libCsoundAC.
-    
-python3 playpen.py cpp-audio {source.cpp}
-#    Compiles and links source.cpp file as a Csound/CsoundAC composition, and 
-#    runs it to render audio.
-    
-python3 playpen.py cpp-soundfile {source.cpp}
-#    Compiles and links source.cpp file as a Csound/CsoundAC composition, 
-#    renders the piece to a source.wav tagged with metadata from 
-#    playpen.ini, then post-processes the file to normalize it, save in various 
-#    formats, etc., and finally opens the soundfile using the editor specified 
-#    in playpen.ini.
-    
-python3 playpen.py man-csound
-#    Opens the online Csound Reference Manual.
-# Custom command for CsoundAC reference.
-command.name.20.*=View the online Csound Reference Manual
-command.subsystem.18=2
-command.18.*=python3 ~/playpen.py man-csound
+command.name.1.*=Render this .csd file to the audio output
+command.subsystem.1=2
+command.1.*=python3 ~/playpen.py csd-audio "$(FileNameExt)"
 
-python3 playpen.py man-python
-#    Opens the online Python documentation.
+command.name.2.*=Render this .csd file to a soundfile, post-process, and play
+command.subsystem.2=2
+command.2.*=python3 ~/playpen.py csd-play "$(FileNameExt)"
+    
+command.name.3.*=Render this .inc file to a soundfile, post-process, and play
+command.subsystem.3=2
+command.3.*=python3 ~/playpen.py csd-patch "$(FileNameExt)"
+    
+command.name.4.*=Open this .html file as a NW.js application
+command.subsystem.4=2
+command.4.*=python3 ~/playpen.py html-nw "$(FileNameExt)"
+    
+command.name.5.*=Compile this .cpp file as a shared library or Csound plugin
+command.subsystem.5=2
+command.5.*=python3 ~/playpen.py cpp-lib "$(FileNameExt)"
+    
+command.name.6.*=Compile this .cpp file as a program
+command.subsystem.6=2
+command.6.*=python3 ~/playpen.py cpp-app "$(FileNameExt)"
+    
+command.name.7.*=Compile this .cpp file as a program and run it to render audio
+command.subsystem.7=2
+command.7.*=python3 ~/playpen.py cpp-audio "$(FileNameExt)"
+    
+command.name.8.*=Compile this .cpp file as a program and run it to render a soundfile and play it
+command.subsystem.8=2
+command.8.*=python3 ~/playpen.py cpp-soundfile "$(FileNameExt)"
+    
+command.name.10.*=View the online Csound Reference Manual
+command.subsystem.10=2
+command.10.*=python3 ~/playpen.py man-csound
 
-python3 playpen.py man-csoundac
-#    Opens the CsoundAC AP Reference.
+command.name.11.*=View the CsoundAC API Reference
+command.subsystem.11=2
+command.11.*=python3 ~/playpen.py man-csoundac
 
-python3 playpen.py cpp-astyle {source}
-#    Uses the astyle program to reform the source file, using 
-#    options configured in playpen.ini.
+command.name.12.*=View the online Python documentation
+command.subsystem.12=2
+command.12.*=python3 ~/playpen.py man-python
 
-
+command.name.13.*=Reformat this source file using astyle
+command.subsystem.13=2
+command.13.*=python3 ~/playpen.py cpp-astyle
