Fixed bug in csound::I.

--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -250,7 +250,8 @@ lexer.errorlist.value.separate=1
 ## CUSTOMIZATION OF VISUAL THEME
 
 # Give symbolic names to fonts used in the standard styles.
-font.monospace=font:!Bitstream Vera Sans Mono,size:11
+#font.monospace=font:!Bitstream Vera Sans Mono,size:11
+font.monospace=font:!Menlo,size:11
 font.base=$(font.monospace)
 font.small=$(font.monospace),size:11
 font.comment=$(font.monospace),size:11,italic
@@ -1275,7 +1276,7 @@ keywords3.$(file.patterns.csound)=$(csound_other_keywords)
 
 comment.block.csound=;
 
-command.go.*.inc=python3.9 ${SciteUserHome)/instrument_test.py $(FileName) 
+command.go.*.inc=python3 $(SciteUserHome)/patch-test.py $(FileNameExt) $(FileName) 
 command.go.subsystem.*.inc=0
 
 command.go.*.csd=csound "$(FilePath)" -+msg_color=0
