--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1344,15 +1344,15 @@ command.name.5.*=Compile this .cpp file as a shared library or Csound plugin
 command.subsystem.5=2
 command.5.*=python3 ~/playpen.py cpp-lib "$(FileNameExt)"
     
-command.name.6.*=Compile this .cpp file as a program
+command.name.6.*=Compile this .cpp file as a program and run it
 command.subsystem.6=2
 command.6.*=python3 ~/playpen.py cpp-app "$(FileNameExt)"
     
-command.name.7.*=Compile this .cpp file as a program and run it to render audio
+command.name.7.*=Compile this CsoundAC .cpp file as a program and run it to render audio
 command.subsystem.7=2
 command.7.*=python3 ~/playpen.py cpp-audio "$(FileNameExt)"
     
-command.name.8.*=Compile this .cpp file as a program and run it to render a soundfile and play it
+command.name.8.*=Compile this CsoundAC .cpp file as a program and run it to render a soundfile and play it
 command.subsystem.8=2
 command.8.*=python3 ~/playpen.py cpp-soundfile "$(FileNameExt)"
     
