--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,9 +2,12 @@ name: CMake
 
 on:
   push:
-    branches: [ master develop ]
+    branches: 
+      - master
+      - develop
   pull_request:
-    branches: [ master develop ]
+    branches: 
+      - develop
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
