--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,6 +39,7 @@ jobs:
         uses: actions/checkout@v3
                   
       - name: Build on Mac OS
+        # Most homebrew packages can be found in ${HOMEBREW_PREFIX}/opt.
         if: runner.os == 'macOS'
         run: |
           echo "Installing tools..."
@@ -47,9 +48,12 @@ jobs:
           brew install doxygen
           brew install libsndfile
           brew install csound
+          brew install eigen
           echo "Updating all git submodules..."
           git submodule update --init --recursive
           git submodule status --recursive
+          echo "Environment:"
+          env
           echo "Finished updating all git submodules."
           echo "Trying to find csdl.h..."
           find /Users/runner -name "csdl.h" -ls 2>/dev/null
@@ -72,6 +76,8 @@ jobs:
           sudo apt-get install doxygen
           sudo apt-get install libsndfile1-dev
           sudo apt-get install csound
+          echo "Environment:"
+          env
           echo "Updating all git submodules..."
           git submodule update --init --recursive
           git submodule status --recursive
@@ -96,6 +102,8 @@ jobs:
           choco install doxygen.install -y
           echo "Installing dependencies..."
           vcpkg install libsndfile
+          echo "Environment:"
+          set
           git clone "https://github.com/csound/csound.git"
           cd csound
           mkdir -p build
