--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -85,7 +85,8 @@ jobs:
           git submodule status --recursive
           echo "Finished updating all git submodules."
           echo "Trying to find csdl.h..."
-          find /usr -name "csdl.h" -ls 2>/dev/null
+          find /opt/runner . -name "csdl.h" -ls 2>/dev/null
+          find /home/runner . -name "csdl.h" -ls 2>/dev/null
           # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
           cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
           # Build with CMake.
