--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -56,8 +56,14 @@ jobs:
           echo "Environment:"
           env
           echo "Finished updating all git submodules."
-          echo "Trying to find csdl.h..."
-          find /Users/runner -name "csdl.h" -ls 2>/dev/null
+        echo "Trying to find csdl.h..."
+          find /opt/runner . -name "csdl.h" -ls 2>/dev/null
+          find /Users/runner . -name "csdl.h" -ls 2>/dev/null
+          find /usr . -name "csdl.h" -ls 2>/dev/null
+          echo "Trying to find csnd6 library..."
+          find /opt/runner . -name "*csnd*" -ls 2>/dev/null
+          find /Users/runner . -name "*csnd*" -ls 2>/dev/null
+          find /usr . -name "*csnd*" -ls 2>/dev/null
           # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
           cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}  
           # Build with CMake.
@@ -90,8 +96,12 @@ jobs:
           find /opt/runner . -name "csdl.h" -ls 2>/dev/null
           find /home/runner . -name "csdl.h" -ls 2>/dev/null
           find /usr . -name "csdl.h" -ls 2>/dev/null
+          echo "Trying to find csnd6 library..."
+          find /opt/runner . -name "*csnd*" -ls 2>/dev/null
+          find /home/runner . -name "*csnd*" -ls 2>/dev/null
+          find /usr . -name "*csnd*" -ls 2>/dev/null
           # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_TOOLCHAIN_FILE=C:\path\to\vcpkg\scripts\buildsystems\vcpkg.cmake
           # Build with CMake.
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} 
           echo "Documenting..."
