--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -88,17 +88,18 @@ jobs:
           sudo apt-get install libopencv-dev
           echo "Environment:"
           env
+          echo "Trying to find csdl.h..."
+          #find /opt/runner . -name "csdl.h" -ls 2>/dev/null
+          find /home/runner . -name "csdl.h" -ls 2>/dev/null
+          find /usr . -name "csdl.h" -ls 2>/dev/null
+          echo "Trying to find csnd6 library..."
+          #find /opt/runner . -name "*csnd*" -ls 2>/dev/null
+          find /home/runner . -name "*csnd*" -ls 2>/dev/null
+          find /usr . -name "*csnd*" -ls 2>/dev/null
           echo "Updating all git submodules..."
           git submodule update --init --recursive
           git submodule status --recursive
           echo "Finished updating all git submodules."
-          echo "Trying to find csdl.h..."
-          find /opt/runner . -name "csdl.h" -ls 2>/dev/null
-          find /home/runner . -name "csdl.h" -ls 2>/dev/null
-          find /usr . -name "csdl.h" -ls 2>/dev/null
-          echo "Trying to find csnd6 library..."
-          find /opt/runner . -name "*csnd*" -ls 2>/dev/null
-          find /home/runner . -name "*csnd*" -ls 2>/dev/null
           find /usr . -name "*csnd*" -ls 2>/dev/null
           # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
           cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} 
