--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -102,7 +102,7 @@ jobs:
           echo "Finished updating all git submodules."
           find /usr . -name "*csnd*" -ls 2>/dev/null
           # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} 
+          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCSND6_LIBRARY=/usr/lib/libcsnd6.so.6.0
           ##-DCMAKE_TOOLCHAIN_FILE=C:\path\to\vcpkg\scripts\buildsystems\vcpkg.cmake
           # Build with CMake.
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} 
@@ -117,7 +117,8 @@ jobs:
         run: |
           echo "Installing tools..."
           choco install graphviz -y
-          vcpkg install doxygenf -y
+          sudo apt install graphviz
+          sudo aot-get install doxygen
           echo "Installing dependencies..."
           vcpkg install libsndfile
           choco install opencv
