--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -37,7 +37,56 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
-                  
+                
+      - name: Install boost on macOS
+        uses: MarkusJx/install-boost@v2.3.0
+        id: install-boost-macos
+        if: runner.os == 'macOS' 
+        with:
+          # REQUIRED: Specify the required boost version
+          # A list of supported versions can be found here: 
+          # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
+          boost_version: 1.79.0
+          # OPTIONAL: Specify a platform version
+          platform_version: 11
+          # OPTIONAL: Specify a custom install location
+          # boost_install_dir: /home/runner/some_directory
+          # OPTIONAL: Specify a toolset
+          toolset: clang    
+
+      - name: Install boost on Linux
+        uses: MarkusJx/install-boost@v2.3.0
+        id: install-boost-linux
+        if: runner.os == 'Linux' 
+        with:
+          # REQUIRED: Specify the required boost version
+          # A list of supported versions can be found here: 
+          # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
+          boost_version: 1.79.0
+          # OPTIONAL: Specify a platform version
+          platform_version: 20.04
+          # OPTIONAL: Specify a custom install location
+          # boost_install_dir: /home/runner/some_directory
+          # OPTIONAL: Specify a toolset
+          toolset: gcc    
+
+      - name: Install boost on Windows
+        uses: MarkusJx/install-boost@v2.3.0
+        id: install-boost-windows
+        if: runner.os == 'Windows' 
+        with:
+          # REQUIRED: Specify the required boost version
+          # A list of supported versions can be found here: 
+          # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
+          boost_version: 1.79.0
+          # OPTIONAL: Specify a platform version
+          platform_version: 2022
+          # OPTIONAL: Specify a custom install location
+          # boost_install_dir: /home/runner/some_directory
+          # OPTIONAL: Specify a toolset
+          toolset: msvc    
+          link: shared      
+          
       - name: Build on Mac OS
         # Most homebrew packages can be found in ${HOMEBREW_PREFIX}/opt.
         if: runner.os == 'macOS'
@@ -65,7 +114,7 @@ jobs:
           find /Users/runner . -name "*csnd*" -ls 2>/dev/null
           find /usr . -name "*csnd*" -ls 2>/dev/null
           # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}  
+          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.install-boost-macos.outputs.BOOST_ROOT }}
           # Build with CMake.
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
           echo "Documenting..."
@@ -105,7 +154,7 @@ jobs:
           echo "Finished updating all git submodules."
           find /usr . -name "*csnd*" -ls 2>/dev/null
           # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCSND6_LIBRARY=/usr/lib/libcsnd6.so.6.0
+          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.install-boost-linux.outputs.BOOST_ROOT }} -DCSND6_LIBRARY=/usr/lib/libcsnd6.so.6.0
           ##-DCMAKE_TOOLCHAIN_FILE=C:\path\to\vcpkg\scripts\buildsystems\vcpkg.cmake
           # Build with CMake.
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} 
@@ -142,7 +191,7 @@ jobs:
           git submodule status --recursive
           echo "Finished updating all git submodules."
           # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} 
+          cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBOOST_ROOT=${{ steps.install-boost-windows.outputs.BOOST_ROOT }}
           # Build with CMake.
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
           dir ${{github.workspace}}/build/Release
